added screenshot of Add To Cart service

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 <body>
   <div id="app">
     <section id="main-carousel">MAIN PHOTO</section>
+    <img src="https://fec-hrr47.s3.us-east-2.amazonaws.com/Add-To-Cart-Picture.png"> <!--Stand-in for Add TO CART service-->
     <!-- <section id="ADD-TO-CART">ADD TO CART</section> SID COMPONENT-->
     <section id="product-detail-carousel">PRODUCT DETAILS CAROUSEL</section>
     <section id="reviews">REVIEWS</section>
@@ -14,7 +15,7 @@
 
   <script type="text/javascript" src="http://localhost:5001/bundle.js"></script>
   <!-- <script type="text/javascript" src="http://localhost:5002/app.js"></script> Add-to-cart -->
-  <script type="text/javascript" src="http://localhost:5003/bundle.js"></script> <!-- Product Details Carousel-->
+  <script type="text/javascript" src="http://localhost:5003/app.js"></script> <!-- Product Details Carousel-->
   <script type="text/javascript" src="http://localhost:5004/bundle.js"></script> <!-- Reviews -->
 
 </body>
