--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <title>Home</title>
+  <title>Unfair</title>
 </head>
 
 <body>
