updated proxy routes

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <title>Unfair</title>
+  <title>Home.com</title>
 </head>
 
 <body>
@@ -83,19 +83,19 @@
     <section id="reviews"></section>
     <div id="white-container">
       <section id="customers-also-viewed">
-        <h1>Customers Also Viewed</h1>
+        <!-- <h1>Customers Also Viewed</h1> -->
       </section>
       <section id="product-detail-carousel"></section>
     </div>
     <div id="footer">
       <div id="about">
         <h1>About Us</h1>
-        <p id="footer-links">About Wayfair</p>
-        <p id="footer-links">Wayfair Professional</p>
+        <p id="footer-links">About Home.com</p>
+        <p id="footer-links">Home.com Professional</p>
         <p id="footer-links">Gift Cards</p>
-        <p id="footer-links">Wayfair Credit Card</p>
+        <p id="footer-links">Home.com Credit Card</p>
         <p id="footer-links">Careers</p>
-        <p id="footer-links">Sell on Wayfair</p>
+        <p id="footer-links">Sell on Home.com</p>
         <p id="footer-links">Investor Relations</p>
         <p id="footer-links">Advertise with Us</p>
         <p id="footer-links">Locations</p>
@@ -118,10 +118,9 @@
         <p id="footer-links">All times Eastern</p>
       </div>
     </div>
-    <script src="http://localhost:5001/bundle.js"></script> <!-- Andrew - Main-Carousel -->
-    <script src="http://localhost:5003/app.js"></script>
-    <!-- Elvin - Product-Detail-Carousel -->
-    <script src="http://localhost:5004/bundle.js"></script> <!-- Matthew - Reviews -->
+    <script src="images/bundle.js"></script> <!-- Andrew - Main-Carousel -->
+    <script src="product/app.js"></script> <!-- Elvin - Product-Detail-Carousel -->
+    <script src="reviews/bundle.js"></script> <!-- Matthew - Reviews -->
   </div>
 </body>
 
